--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+# .env example for Faceit Discord Bot
 DISCORD_TOKEN=your_discord_bot_token_here
 FACEIT_API_KEY=your_faceit_api_key_here
+GUILD_ID=your_discord_guild_id_here
